Bug 1950992 - Convert potential 32bit values to 64bit to prevent overflow/underflow during native timestamp conversion r=padenot

In Linux, GTK returns uint32_t values for `GdkEventButton.time`. It's known that
in the wild we encountered some incorrect values. But the latest I encountered
was in Bug 1950992. It was returning some incorrect values for
WidgetEvent::mTimeStamp. This change should prevent that overflow/underflow.

Differential Revision: https://phabricator.services.mozilla.com/D240024